Finish the major part of the website

--- a/newlogobranding/scriptorium/FAQ.html
+++ b/newlogobranding/scriptorium/FAQ.html
@@ -24,6 +24,11 @@
   ga('send', 'pageview');
 
 </script>
+
+<script>var __adobewebfontsappname__="dreamweaver"</script>
+<script src="http://use.edgefonts.net/asul:n4:default.js" type="text/javascript"></script>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
