--- a/newlogobranding/scriptorium/about.html
+++ b/newlogobranding/scriptorium/about.html
@@ -24,7 +24,10 @@
   ga('send', 'pageview');
 
 </script>
-
+<script>var __adobewebfontsappname__="dreamweaver"</script>
+<script src="http://use.edgefonts.net/asul:n4:default.js" type="text/javascript"></script>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
