--- a/newlogobranding/scriptorium/corpora.html
+++ b/newlogobranding/scriptorium/corpora.html
@@ -6,6 +6,7 @@
 
   <title>Coptic Scriptorium</title>
   <link rel="stylesheet" href="scriptorium.css" type="text/css" charset="utf-8"/>
+  <meta name="viewport" content="width=800">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script> 
     $(function(){
@@ -25,6 +26,10 @@
 
 </script>
 
+<script>var __adobewebfontsappname__="dreamweaver"</script>
+<script src="http://use.edgefonts.net/asul:n4:default.js" type="text/javascript"></script>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -225,6 +230,5 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 
 <!-- Bottom Content -->
 <div id="bottomcontent"></div>
-<p>Page last updated 26 January 2015</p>
 </body>
 </html>   
