--- a/newlogobranding/scriptorium/news.html
+++ b/newlogobranding/scriptorium/news.html
@@ -25,7 +25,10 @@
 
 </script>
 
-
+<script>var __adobewebfontsappname__="dreamweaver"</script>
+<script src="http://use.edgefonts.net/asul:n4:default.js" type="text/javascript"></script>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
