--- a/newlogobranding/scriptorium/top.html
+++ b/newlogobranding/scriptorium/top.html
@@ -2,4 +2,13 @@
     <div id="copticlogo"><a href="index.html"><img src="img/copticlogo.png" width="210" height="101" alt="Coptic SCRIPTORIUM"/></a></div>
 
     <div id="unicorn"><a href="index.html"><img src="img/unicorn.png" width="80" height="101" alt="Unicorn"/></a></div>
-    <div id="englishlogo"><a href="index.html"><img src="img/englishlogo.png" width="199" height="101" alt="Coptic SCRIPTORIUM"/></a></div><img src="img/ruleline.png" width="800px" height="14" alt=""/></div>
+    <div id="englishlogo"><a href="index.html"><img src="img/englishlogo.png" width="199" height="101" alt="Coptic SCRIPTORIUM"/></a></div><img src="img/ruleline.png" width="800px" height="14" alt=""/>
+
+
+</br>
+</br>
+
+<a class="github" href="https://github.com/CopticScriptorium" target="new"> Fork us on GitHub</a>!<br />
+
+<a class="twitter" href="https://twitter.com/copticscript" target="_blank">Follow Coptic SCRIPTORIUM on Twitter</a>
+  </div>
