--- a/newlogobranding/scriptorium/nav.html
+++ b/newlogobranding/scriptorium/nav.html
@@ -1,9 +1,28 @@
 <ul id="nav">
-  <li><a href="index.html">HOME</a></li>
-  <li><a href="tools.html">TOOLS</a></li>
-  <li><a href="corpora.html">CORPORA</a></li>
-  <li><a href="FAQ.html">DOCUMENTATION</a></li>
-  <li><a href="news.html">NEWS</a></li>
-   <li><a href="workshop2015/index.html">WORKSHOP</a></li>
-  <li><a href="about.html">ABOUT</a></li>
+  <li><a href="index.html" id="indexpage">HOME</a></li>
+  <li><a href="tools.html" id="tools">TOOLS</a></li>
+  <li><a href="corpora.html" id="corpora">CORPORA</a></li>
+  <li><a href="FAQ.html" id="faq">DOCUMENTATION</a></li>
+  <li><a id="news" href="news.html">
+    NEWS
+    <ul>
+      <li><a id="ws2015" href="workshop2015/index.html">WORKSHOP 2015</a></li>
+      <li><a id="ws2013" href="workshop2013/workshop2013.html">WORKSHOP 2013</a></li>
+    </ul>
+    </a>
+  </li>
+  <li><a id="about" href="about.html">ABOUT</a></li>
 </ul>
+
+<script>
+      if($(document).find("title").text().toLowerCase().indexOf("workshop")>=0){
+        $("#indexpage").attr("href", "../index.html");
+        $("#tools").attr("href", "../tools.html");
+        $("#corpora").attr("href", "../corpora.html");
+        $("#faq").attr("href", "../FAQ.html");
+        $("#news").attr("href", "../news.html");
+        $("#ws2015").attr("href", "../workshop2015/index.html");
+        $("#ws2013").attr("href", "../workshop2013/workshop2013.html");
+        $("#about").attr("href", "../about.html");
+      }
+</script>
