--- a/newlogobranding/scriptorium/top.html
+++ b/newlogobranding/scriptorium/top.html
@@ -1,14 +1,20 @@
 <div id="header">
-    <div id="copticlogo"><a href="index.html"><img src="img/copticlogo.png" width="210" height="101" alt="Coptic SCRIPTORIUM"/></a></div>
+    <div id="copticlogo"><a href="index.html"><img id="img1" src="img/copticlogo.png" width="210" height="101" alt="Coptic SCRIPTORIUM"/></a></div>
 
-    <div id="unicorn"><a href="index.html"><img src="img/unicorn.png" width="80" height="101" alt="Unicorn"/></a></div>
-    <div id="englishlogo"><a href="index.html"><img src="img/englishlogo.png" width="199" height="101" alt="Coptic SCRIPTORIUM"/></a></div><img src="img/ruleline.png" width="800px" height="14" alt=""/>
+    <div id="unicorn"><a href="index.html"><img id="img2" src="img/unicorn.png" width="80" height="101" alt="Unicorn"/></a></div>
+    <div id="englishlogo"><a href="index.html"><img id="img3" src="img/englishlogo.png" width="199" height="101" alt="Coptic SCRIPTORIUM"/></a></div><img id="img4" src="img/ruleline.png" width="800px" height="14" alt=""/>
 
 
 </br>
 </br>
+</div>
 
-<a class="github" href="https://github.com/CopticScriptorium" target="new"> Fork us on GitHub</a>!<br />
 
-<a class="twitter" href="https://twitter.com/copticscript" target="_blank">Follow Coptic SCRIPTORIUM on Twitter</a>
-  </div>
+  <script>
+      if($(document).find("title").text().toLowerCase().indexOf("workshop")>=0){
+        $("#img1").attr("src", "../img/copticlogo.png");
+        $("#img2").attr("src", "../img/unicorn.png");
+        $("#img3").attr("src", "../img/englishlogo.png");
+        $("#img4").attr("src", "../img/ruleline.png");
+      }
+</script>
