edits to webpage, minor CSS adjustments

--- a/newlogobranding/scriptorium/about.html
+++ b/newlogobranding/scriptorium/about.html
@@ -39,6 +39,27 @@
 	<p></p>
   <div id="content">
 
+  <p>Coptic SCRIPTORIUM (<span style="text-decoration: underline;">S</span>ahidic<span
+        > </span><span style="text-decoration: underline;"
+        >C</span>orpus<span > </span><span
+        style="text-decoration: underline;">R</span>esearch:<span
+        > </span><span style="text-decoration: underline;"
+        >I</span>nternet<span > </span><span
+        style="text-decoration: underline;">P</span>la<span
+        style="text-decoration: underline;">t</span>f<span
+        style="text-decoration: underline;">or</span>m for<span
+        > </span><span style="text-decoration: underline;"
+        >I</span>nterdisciplinary m<span style="text-decoration: underline;"
+        >u</span>ltilayer<span > </span><span
+        style="text-decoration: underline;">M</span>ethods) is a collaborative, digital
+      project created by<span > </span><a
+        href="http://www.carrieschroeder.com/"
+        shape="rect">Caroline T.
+        Schroeder</a><span > </span>(University of the Pacific)
+        and<span > </span><a
+        href="http://corpling.uis.georgetown.edu/amir/"
+        shape="rect">Amir
+    Zeldes</a><span > </span>(Georgetown University).</p>
   <p>Support for  <a href="index.html">Coptic SCRIPTORIUM</a> has been provided by:</p>
 		<ul>
 		  <li>The <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>,</li>
@@ -67,7 +88,8 @@
           <li>Alain Delattre, Assistant Professor, Department of Languages and Literatures, Université libre de Bruxelles; Papryi.info.</li>
           <li>Eitan Grossman,  Assistant Professor, Department of Linguistics and the School of Language Sciences, Hebrew University.</li>
           <li>Robin Imhof, Humanities Librarian and Associate Professor, University Library, the University of the Pacific.</li>
-		</ul>
+        </ul>
+		<p>Our logo and website brand were designed by <a href="http://www.modernphoenix.net/about.htm" title="Alison King website" target="_blank">Alison King</a>, Assoc. Prof. of Graphic Design  at the Art Institute of Phoenix and Founding Editor and Designer of <a href="http://www.modernphoenix.net" title="modern phoenix" target="_blank">Modern Phoenix</a>.</p>
 <p>C. Schroeder and A. Zeldes gratefully acknowledge the following individuals and organizations for their contributions to the project:</p>
 <ul>
   <li>The <a href="http://cmcl.aai.uni-hamburg.de/" target="new">Corpus dei Manoscritti Copti Letterari</a> (Coptic lexicon and other materials)</li>
