--- a/newlogobranding/scriptorium/nav.html
+++ b/newlogobranding/scriptorium/nav.html
@@ -4,12 +4,11 @@
   <li><a href="corpora.html" id="corpora">CORPORA</a></li>
   <li><a href="FAQ.html" id="faq">DOCUMENTATION</a></li>
   <li><a id="news" href="news.html">
-    NEWS
+    NEWS</a>
     <ul>
       <li><a id="ws2015" href="workshop2015/index.html">WORKSHOP 2015</a></li>
       <li><a id="ws2013" href="workshop2013/workshop2013.html">WORKSHOP 2013</a></li>
     </ul>
-    </a>
   </li>
   <li><a id="about" href="about.html">ABOUT</a></li>
 </ul>
