--- a/newlogobranding/scriptorium/workshop2015/cfp2015.html
+++ b/newlogobranding/scriptorium/workshop2015/cfp2015.html
@@ -44,20 +44,15 @@
 
 <div id="content">
           <div class="headline">
-            <h1>Digital Coptic 2<br />
-              Program and Registration information
-              <br />
-            </h1>
+            <h1>CALL FOR PAPERS<br />
+              Digital Coptic 2</h1>
             <h2>March 12-13, 2015<br />
            Hosted by <a href="../index.html">Coptic SCRIPTORIUM</a> at Georgetown University</h2>
           </div>
-          <p>Coptic SCRIPTORIUM is pleased to host a second workshop  and symposium on Digital Humanities and Coptic Studies.  It will take  place March 12-13, 2015 at Georgetown University in Washington, DC.   This event follows on <a href="http://www.copticscriptorium.org/workshop2013/workshop2013.html">the workshop in May 2013 at Humboldt University</a>,  Berlin.  </p>
-          <p>There are no registration fees to attend. A simple lunch will be provided for attendees who register by February 15.    <strong>To register, please fill out this brief form.</strong></p>
-    <h2><a name="March12" id="March12"></a>Thursday, March 12:  Symposium</h2>
-    <p>9 am-6 pm<br />
-    location on Georgetown University campus TBA    </p>
-    <h2> <a name="March13" id="March13"></a>Friday March 13<br />
-  </h2>
+          <p>Coptic SCRIPTORIUM is pleased to host a second workshop  and symposium on Digital Humanities and Coptic Studies.  It will take  place March 12-13, 2015 at Georgetown University in Washington, DC.   This event follows on <a href="http://www.copticscriptorium.org/workshop2013/workshop2013.html">the workshop in May 2013 at Humboldt University</a>,  Berlin.   The first day will be a public symposium and workshop on the state of  the field; the second day will be dedicated to Coptic SCRIPTORIUM (use  of the corpus and technologies, contributing to the project, future  directions, possible collaborations). </p>
+          <p>For the symposium, we welcome proposals for presentations  on research in Digital Coptic studies (20 minutes), project  descriptions (10 minutes), and roundtables or panels on questions and  emerging standards.  Researchers in areas other than Coptic whose work  can contribute to scholarly conversations in Digital Humanities and  Coptic Studies are welcome to submit proposals, as well. Ample time  will be reserved for discussion throughout the day.  </p>
+          <p>There are no registration fees to attend. There may be limited travel bursaries available for presenters.</p>
+    <h2>To submit a proposal, please <a href="http://goo.gl/forms/Nkve2QoNTz">fill out this brief form</a>.</h2>
           <p>For questions, please contact Caroline T. Schroeder  (carrie [@] carrieschroeder.com) or Amir Zeldes (amir.zeldes [@]  georgetown.edu).</p>
    </div>
 <div id="bottomcontent"></div>
