--- a/newlogobranding/scriptorium/index.html
+++ b/newlogobranding/scriptorium/index.html
@@ -75,13 +75,15 @@
     </div>
     <div class="rightcolumn">
       <h2>MEET UP IN MARCH!</h2>
-        Join us at our Digital Coptic workshop and symposium at  Georgetown University, March 12-13, 2015. <a href="workshop2015/index.html">Details and CFP here</a>.
+        <p>Join us at our Digital Coptic workshop and symposium at  Georgetown University, March 12-13, 2015. The event is free and open to the public. <a href="workshop2015/index.html">Program and registration information is here.</a>      </p>
+      <h2>MEET OUR MASCOT</h2>
+      <p><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="320" height="226" alt="Pierpont Morgan Unicorn" border="1"/>We've updated our brand with a new logotype  and interpreted the unicorn from the <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r" title="Pierpont Morgan unicorn illustration link">M.0581</a> Manuscript at the Pierpont Morgan Library in New York as our mascot. What do you think? <a href="http://www.twitter.com/copticscript" title="scriptorium Twitter account" target="new">Weigh in on Twitter</a>.   [Image is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a>, for non-commercial use only.]  The unicorn was originally painted in the 9th or 10th century by 
+        the copyist and illustrator Deacon Dioskoros in the Fayyum region of Egypt.  Our website, logo, and mascot were designed by <a href="http://www.modernphoenix.net/about.htm" title="Alison King website" target="_blank">Alison  King</a>, Assoc. Prof. of Graphic Design at the Art Institute of Phoenix and Founding Editor and Designer of <a href="http://www.modernphoenix.net" title="modern phoenix" target="_blank">Modern Phoenix</a>.
+      </p>
       <h2>NEW CORPUS ADDED</h2>
       <a href="https://corpling.uis.georgetown.edu/annis/scriptorium#_c=c2hlbm91dGUuZm94" target="_blank">Shenoute's Not Because a Fox Barks </a>(MONB.XH witness)
-was added in December 2014.
-<h2>MEET OUR MASCOT</h2>
-    <img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="320" height="226" alt="Pierpont Morgan Unicorn" border="1"/>We've updated our brand with a new logotype  and interpreted the unicorn from the ____ Manuscript at the Pierpont Morgan Library New York as our mascot. What do you think? <a href="#">Weigh in here</a> (link to whatever blog or social platform announces it).   [Image is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> available  <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">here</a>, for non-commercial use only.]
-    <h2>VIDEO</h2>
+was added in December 2014. 
+      <h2>VIDEO</h2>
       <a href="https://www.youtube.com/watch?v=JZW6oWHbwQU" target="new">We created a new video</a> introducing the project texts and data model, and how to use ANNIS in November 2014.		
       <h2>WORKSHOP ARCHIVE</h2>
       We hosted a workshop on digital research and scholarship in Coptic at Humboldt University on May 14, 2013. <a href="workshop2013/workshop2013.html">View the program and presentations here.</a>
