updating with new branding

--- a/workshop2013/workshop2013.html
+++ b/workshop2013/workshop2013.html
@@ -24,7 +24,11 @@
   ga('send', 'pageview');
 
 </script>
-
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
+<script>var __adobewebfontsappname__="dreamweaver"</script>
+<script src="http://use.edgefonts.net/asul:n4:default.js" type="text/javascript"></script>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -33,7 +37,7 @@
 <div id="wrapper">
      <div id="topbanner"></div>
 
-	<p></p>
+	<div id="content">
 		<h3>Workshop on Digital and Computational Scholarship in the Coptic Language</h3>
 <h4>Hosted by the University of the Pacific (Stockton, California) and Humboldt University (Berlin)</h4>
 <p>Location:
@@ -83,6 +87,7 @@ Daniel Werning (Humboldt University, Institute for Archaeology)<br />
   <br />
 </p>
 	<p></p>
+  </div>
 		<!-- Bottom Content -->
   <div id="bottomcontent"></div>
 </body>
