--- a/AbrahamOurFatherParallels.html
+++ b/AbrahamOurFatherParallels.html
@@ -7,11 +7,13 @@
 	<title>Coptic Scriptorium</title>
 	<link rel="stylesheet" href="scriptorium.css" type="text/css" charset="utf-8"/>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script> 
+<script> 
     $(function(){
+      $("#navbar").load("nav.html");
       $("#topbanner").load("top.html");
+      $("#bottomcontent").load("bottom.html"); 
     });
-  </script> 
+</script> 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -43,14 +45,21 @@ h3 {
 	
 </style>
 
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
+<script>var __adobewebfontsappname__="dreamweaver"</script>
+<script src="http://use.edgefonts.net/asul:n4:default.js" type="text/javascript"></script>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 <title>Abraham Our Father Collation</title>
 </head>
 
 <body>
+<div id="navbar"></div>
 <div id="wrapper">
      <div id="topbanner"></div>
 
-	<p></p>
+<div id="content">
 <center>
   <h3><p>Abraham Our Father Collation</p></h3>
   <p><a href="index.html">Return to the Coptic SCRIPTORIUM Main Page</a></p>
@@ -574,10 +583,9 @@ h3 {
 <p>&nbsp;</p>
 <p>Table created by Lauren McDermott.</p>
 <p>Reference:  Emmel, Stephen. <em>Shenoute’s Literary Corpus</em>. 2 vols. Corpus Scriptorum Christianorum Orientalium 599-600. Louvain: Peeters, 2004.</p>
-		<p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/><a href="https://github.com/CopticScriptorium" target="new"> Fork us on GitHub</a>.<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><br />
-		  Text on this page licensed under the Creative Commons Attribution 3.0 Unported License.  <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a></p>
-		<p><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</p>
-		<p>Page last updated 5 September 2014.</p>
+
+</div>
+		<div id="bottomcontent"></div>
     </div>
     </div>
     </body>
