--- a/FAQ.html
+++ b/FAQ.html
@@ -24,16 +24,22 @@
   ga('send', 'pageview');
 
 </script>
+
+<script>var __adobewebfontsappname__="dreamweaver"</script>
+<script src="http://use.edgefonts.net/asul:n4:default.js" type="text/javascript"></script>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
   <!-- Navbar  -->
 <div id="navbar"></div>
 <div id="wrapper">
-     <div id="topbanner"></div>
+<div id="topbanner"></div>
+
 
 	<p></p>
-
+<div id="content">
 <h3>Frequently Asked Questions</h3>
 <p><a href="#dipl">What is a &quot;diplomatic edition&quot;?</a></p>
 <p><a href="#norm">What is a &quot;normalized edition&quot;?</a></p>
@@ -83,6 +89,7 @@
 <p><strong><a name="board" id="board"></a>Do you have an Advisory Board?</strong><br />
   Yes. The current Advisory Board members are listed on our <a href="acknowledgments.html">acknowledgments page</a>.</p>
 	<p></p>
+</div>
 		<!-- Bottom Content -->
 <div id="bottomcontent"></div>
 </div>
