--- a/tools.html
+++ b/tools.html
@@ -24,7 +24,10 @@
   ga('send', 'pageview');
 
 </script>
-
+<script>var __adobewebfontsappname__="dreamweaver"</script>
+<script src="http://use.edgefonts.net/asul:n4:default.js" type="text/javascript"></script>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -34,8 +37,10 @@
 <div id="navbar"></div>
 
 <div id="wrapper">
-  <div id="topbanner"></div>
-     
+<div id="topbanner"></div>
+
+
+<div id="content">     
 <h2>Tools</h2>
 <p>
 	Some of the tools below use a Sahidic Coptic lexicon based on data kindly provided by Prof. Tito Orlandi and the <a href="http://cmcl.let.uniroma1.it/">CMCL</a> project.
@@ -52,9 +57,9 @@
 	</ul></li>
 <li>Documentation
   <ul>
-    <li><a href="download/tools/SCRIPTORIUMDiplTranscriptionGuidelines.pdf" target="new">Diplomatic Transcription Guidelines</a></li>
+    <li><a href="http://www.copticscriptorium.org/download/tools/SCRIPTORIUMDiplTranscriptionGuidelines.pdf" target="new">Diplomatic Transcription Guidelines</a>(version 1.1.0)</li>
     <li>Tokenization Guidelines (see sections 3 &amp; 4 of the Transcription Guidelines)</li>
-    <li><a href="download/tools/scriptorium_tagset_documentation.pdf" target="new">Part-of-Speech Tagging Guidelines </a></li>
+    <li><a href="http://www.copticscriptorium.org/download/tools/scriptorium_tagset_documentation.pdf" target="new">Part-of-Speech Tagging Guidelines (version 1.1.0)</a></li>
     </ul>
 </li>
 </ul>
@@ -76,9 +81,10 @@
   <li><a href="http://www.exmaralda.org/exceladdin.html">Excel-Plugin</a> for importing and exporting EXMARaLDA XML, SGML, PAULA XML and subsets of TEI XML</li>
 
 </ul>
+</div>
 
 <!-- Bottom Content -->
     <div id="bottomcontent"></div>
-<p>Page last updated 26 January 2015</p>
+
 </body>
     </html>   
