--- a/top.html
+++ b/top.html
@@ -1,17 +1,20 @@
-<table width=100%><tr>
-    <td width="210" rowspan="3" valign="bottom"><a href="#imageCredit"><img id="img1" src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="211" height="150" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
-      <td width="15"> </td>
-    <td width="77%" valign="bottom"><h1>Coptic Scriptorium</h1>
-      <img id="img2" alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px" longdesc="http://www.pacific.edu"/>                 <img id="img3" src="img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" longdesc="http://www.georgetown.edu"/>       <img  id="img4" src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62px" alt="neh logo" longdesc="http://www.neh.gov"/></td>
-    </tr>
-</table>
+<div id="header">
+    <div id="copticlogo"><a href="index.html"><img id="img1" src="img/copticlogo.png" width="210" height="101" alt="Coptic SCRIPTORIUM"/></a></div>
 
-<script>
+    <div id="unicorn"><a href="index.html"><img id="img2" src="img/unicorn.png" width="80" height="101" alt="Unicorn"/></a></div>
+    <div id="englishlogo"><a href="index.html"><img id="img3" src="img/englishlogo.png" width="199" height="101" alt="Coptic SCRIPTORIUM"/></a></div><img id="img4" src="img/ruleline.png" width="800px" height="14" alt=""/>
+
+
+</br>
+</br>
+</div>
+
+
+  <script>
       if($(document).find("title").text().toLowerCase().indexOf("workshop")>=0){
-        $("#img1").attr("src", "../img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg");
-        $("#img1").attr("longdesc", "../img/PierpontMorganUnicornDetail_m581.010ra.jpg");
-        $("#img2").attr("src", "../img/Seal_Orange_RGB.png");
-        $("#img3").attr("src", "../img/Georgetown_university_seal.gif");
-        $("#img4").attr("src", "../img/neh_logo_horizontal_rgb.jpg");
+        $("#img1").attr("src", "../img/copticlogo.png");
+        $("#img2").attr("src", "../img/unicorn.png");
+        $("#img3").attr("src", "../img/englishlogo.png");
+        $("#img4").attr("src", "../img/ruleline.png");
       }
 </script>
