fixed formatting error in 2015 workshop file

--- a/newlogobranding/scriptorium/workshop2015/index.html
+++ b/newlogobranding/scriptorium/workshop2015/index.html
@@ -142,8 +142,8 @@ Robin Darling Young, the Catholic University of America</td>
       </tr>
       <tr>
         <td width="125" align="left" valign="top">&nbsp;</td>
-        <td><p><em>A New XML Exchange Format for Aligning Translations, Quotations, and Other Versions of Texts</em><br />
-        Joel Kalvesmaki, Dumbarton Oaks</p></td>
+        <td><em>A New XML Exchange Format for Aligning Translations, Quotations, and Other Versions of Texts</em><br />
+        Joel Kalvesmaki, Dumbarton Oaks</td>
       </tr>
       <tr>
         <td width="125" align="left" valign="top">&nbsp;</td>
