updated guidelines to direct people to GitHub repositories

--- a/workshop2015/index.html
+++ b/workshop2015/index.html
@@ -124,7 +124,7 @@
       </tr>
       <tr>
         <td width="115" align="left" valign="top">&nbsp;</td>
-        <td><em>Synthesis, Boundedness and Clitics in Sahidic Coptic</em><br />
+        <td><em>Synthesis, Boundness, and Clitics in Sahidic Coptic</em><br />
         So Miyagawa, Kyoto University</td>
       </tr>
       <tr>
